[gd_scene load_steps=9 format=2]

[ext_resource path="res://script/ui/src/UIPause.gd" type="Script" id=1]
[ext_resource path="res://script/ui/anim/ScaleOpen.gd" type="Script" id=2]
[ext_resource path="res://script/ui/anim/ScaleClose.gd" type="Script" id=3]
[ext_resource path="res://asset/font/m5x7.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.140625, 0.140625, 0.140625, 0.745098 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.745098 )

[node name="UIPause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 360, 640 )
script = ExtResource( 1 )
ui_type = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -24.0
margin_right = 240.0
margin_bottom = 24.0
rect_min_size = Vector2( 480, 48 )
custom_constants/separation = 30

[node name="BtnResume" type="Button" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 51.0
rect_min_size = Vector2( 480, 48 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Resume"

[node name="BtnRestart" type="Button" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 480.0
margin_bottom = 132.0
rect_min_size = Vector2( 480, 48 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Restart"

[node name="BtnMainMenu" type="Button" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 480.0
margin_bottom = 213.0
rect_min_size = Vector2( 480, 48 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Main Menu"

[node name="ScaleOpen" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ScaleClose" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnRestart" to="." method="_on_BtnRestart_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
